--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@
 #spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 app.topic.name=kafka-error-handle
+spring.kafka.consumer.groupId=amlan-group
