--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.4</version>
+		<version>3.5.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.kafka.retry</groupId>
@@ -15,7 +15,7 @@
 	<description>Demo project for Spring Boot with Kafka producer and consumer example</description>
 	<properties>
 		<java.version>21</java.version>
-		<testcontainers.version>1.17.6</testcontainers.version>
+		<opencsv.version>5.12.0</opencsv.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -64,7 +64,7 @@
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
-			<version>5.7.0</version> <!-- Use the latest version available -->
+			<version>${opencsv.version}</version> <!-- Use the latest version available -->
 		</dependency>
 	</dependencies>
 
